--- a/blog-module/src/app/blog-entries/blog-entries.component.html
+++ b/blog-module/src/app/blog-entries/blog-entries.component.html
@@ -1,4 +1,4 @@
-<h2>Article</h2>
+<h2>Fetched Articles</h2>
 <div *ngFor="let article of articles">
-  <pre>{{ article | json }}</pre>  
+  <app-blog-entry [article]="article"></app-blog-entry>  
 </div>
