--- a/blog-module/src/app/blog-categories/blog-categories.component.html
+++ b/blog-module/src/app/blog-categories/blog-categories.component.html
@@ -1,8 +1,7 @@
 <h2>Blog Categories</h2>
 
-
 <ul>
   <li *ngFor="let category of groupedCategories | keyvalue">
-    {{ category.key }} ({{ category.value }}) 
+    <a [routerLink]="['/category', category.key]">{{ category.key }} ({{ category.value }})</a>
   </li>
 </ul>
