--- a/blog-module/src/app/blog-category-result/blog-category-result.component.html
+++ b/blog-module/src/app/blog-category-result/blog-category-result.component.html
@@ -1,9 +1,6 @@
 <h2>Posts for Category: {{ category }}</h2>
 
-<ul>
-  <li *ngFor="let article of articles">
-    <strong>{{ article.fields.title.stringValue }}</strong> 
-    by {{ article.fields.author.stringValue }} 
-    on {{ article.fields.date.timestampValue | date }}
-  </li>
-</ul>
+
+<div *ngFor="let article of articles">
+  <app-blog-entry [article]="article"></app-blog-entry>
+</div>
