chore: blog card style

--- a/blog-module/src/styles.scss
+++ b/blog-module/src/styles.scss
@@ -11,3 +11,13 @@ $hover-color: darken($primary-color, 10%);
 $border-radius: 20px;
 $max-width: 200px;
 $spacing-unit: 10px;
+
+// blog
+
+$blog-primary-color: #292a2a;
+$blog-secondary-color: #4f89b2;
+$blog-text-color: #3e404b;
+$blog-hover-color: #f9fafb;
+$blog-border-radius: 20px;
+$blog-max-width: 200px;
+$blog-spacing-unit: 10px;
