--- a/blog-module/src/app/app.component.html
+++ b/blog-module/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-blog-categories/>
-<p>click in the div containing the post to navigate. Needs styling!</p>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="nav-column">
+      <app-blog-categories></app-blog-categories>
+    </div>
+    <div class="content-column">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  
