--- a/blog-module/src/app/blog-entries/blog-entry/blog-entry.component.html
+++ b/blog-module/src/app/blog-entries/blog-entry/blog-entry.component.html
@@ -1,8 +1,17 @@
 <div class="blog-entry" (click)="viewDetails()">
-    <h3>{{ article.fields.title.stringValue }}</h3>
-    <p><strong>Author:</strong> {{ article.fields.author.stringValue }}</p>
-    <p><strong>Category:</strong> {{ article.fields.category.stringValue }}</p>
-    <p><strong>Date:</strong> {{ article.fields.date.timestampValue | date }}</p>
-    <p>{{ article.fields.content.stringValue | slice: 0:20 }}...</p> <!-- short text, ajustar longitud a cortar -->
-  </div>
-  
+  <h3 class="blog-entry__title">{{ article.fields.title.stringValue }}</h3>
+  <p class="blog-entry__author">
+    <strong class="blog-entry__author-label">Author:</strong>
+    {{ article.fields.author.stringValue }}
+  </p>
+  <p class="blog-entry__category">
+    <strong class="blog-entry__category-label">Category:</strong>
+    {{ article.fields.category.stringValue }}
+  </p>
+  <p class="blog-entry__date">
+    <strong class="blog-entry__date-label">Date:</strong>
+    {{ article.fields.date.timestampValue | date }}
+  </p>
+  <p class="blog-entry__content">{{ article.fields.content.stringValue | slice: 0:20 }}...</p>
+  <!-- short text, ajustar longitud a cortar -->
+</div>
