chore: add styles scss

--- a/blog-module/src/app/app.component.html
+++ b/blog-module/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-    <div class="nav-column">
+<div class="app-layout">
+    <div class="app-layout__nav-column">
       <app-blog-categories></app-blog-categories>
     </div>
-    <div class="content-column">
+    <div class="app-layout__content-column">
       <router-outlet></router-outlet>
     </div>
   </div>
