--- a/blog-module/src/app/app.component.scss
+++ b/blog-module/src/app/app.component.scss
@@ -1,21 +1,17 @@
 @import 'styles.scss';
 
+.app-layout {
+  display: flex;
+  justify-content: space-between;
+  padding: $spacing-unit;
 
-.container {
-    display: flex;
-    justify-content: space-between;
-    padding: $spacing-unit;
-  
-    .nav-column {
-      width: 250px;
-      
-    }
-  
-    .content-column {
-      flex-grow: 1;
-      margin-left: $spacing-unit;
-      padding: $spacing-unit;
-     
-    }
+  &__nav-column {
+    width: 250px;
   }
-  
+
+  &__content-column {
+    flex-grow: 1;
+    margin-left: $spacing-unit;
+    padding: $spacing-unit;
+  }
+}
