--- a/blog-module/src/app/blog-entries/blog-entry/blog-entry.component.scss
+++ b/blog-module/src/app/blog-entries/blog-entry/blog-entry.component.scss
@@ -8,6 +8,7 @@
   border: 1px solid $blog-secondary-color;
   border-radius: $blog-border-radius;
   max-width: $blog-max-width;
+  cursor: pointer;
 //   background-color: $secondary-color;
   color: $blog-text-color;
   transition: background-color 0.3s ease;
