styling post entry

--- a/blog-module/src/app/blog-entries/blog-detail/blog-detail.component.html
+++ b/blog-module/src/app/blog-entries/blog-detail/blog-detail.component.html
@@ -1,11 +1,23 @@
-<div *ngIf="article">
-    <h1>{{ article.fields.title.stringValue }}</h1>
-    <p><strong>Author:</strong> {{ article.fields.author.stringValue }}</p>
-    <p><strong>Category:</strong> {{ article.fields.category.stringValue }}</p>
-    <p><strong>Date:</strong> {{ article.fields.date.timestampValue | date }}</p>
-    <p>{{ article.fields.content.stringValue }}</p>
-
-    <button (click)="goBack()">Back to Home</button>
-    
+<div class="post" *ngIf="article">
+  <div class="post__header">
+    <h1 class="post__title">{{ article.fields.title.stringValue }}</h1>
   </div>
-  
+  <div class="post__meta">
+    <p class="post__author">
+      <strong class="post__author-label">Author:</strong> 
+      {{ article.fields.author.stringValue }}
+    </p>
+    <p class="post__category">
+      <strong class="post__category-label">Category:</strong> 
+      {{ article.fields.category.stringValue }}
+    </p>
+    <p class="post__date">
+      <strong class="post__date-label">Date:</strong> 
+      {{ article.fields.date.timestampValue | date }}
+    </p>
+  </div>
+  <div class="post__content">
+    <p>{{ article.fields.content.stringValue }}</p>
+  </div>
+  <button class="post__back-button" (click)="goBack()">Back to Home</button>
+</div>
