--- a/blog-module/src/app/blog-categories/blog-categories.component.html
+++ b/blog-module/src/app/blog-categories/blog-categories.component.html
@@ -1,6 +1,8 @@
 <h2>Blog Categories</h2>
 
 <div class="categories__chip--wrap">
+  <app-blog-add></app-blog-add> 
+  
   <div class="categories__chip--element">
     <a [routerLink]="['/']"> All posts </a>
   </div>
