--- a/blog-module/src/app/blog-categories/blog-add/blog-add.component.scss
+++ b/blog-module/src/app/blog-categories/blog-add/blog-add.component.scss
@@ -7,7 +7,7 @@
    
     // nested item
     .blog-add__chip--element {
-        background-color: #333333;
+        background-color: #5c5c5c;
         color: $text-color;
         border-radius: $border-radius;
         padding: $spacing-unit;
