trying to find out why route does not work

--- a/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
+++ b/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
@@ -3,7 +3,8 @@
   
   
   <div class="blog-add__chip--element">
-    <a [routerLink]="['/']"> Add post </a>
+    <a [routerLink]="['/wtf']"> Add post </a>
+   <!-- <app-blog-add-post/> -->
   </div>
  
 </div>
