no further improvement

--- a/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
+++ b/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
@@ -3,8 +3,8 @@
   
   
   <div class="blog-add__chip--element">
-    <a [routerLink]="['/wtf']"> Add post </a>
-   <!-- <app-blog-add-post/> -->
+  <a [routerLink]="['/cosa']"> Add post </a>
+  <!-- <app-blog-add-post/>  -->
   </div>
  
 </div>
