feature: post blog entry

--- a/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
+++ b/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
@@ -3,7 +3,7 @@
   
   
   <div class="blog-add__chip--element">
-  <a [routerLink]="['posting/cosa']"> Add post </a>
+  <a [routerLink]="['add/post']"> Add post </a>
   <!-- <app-blog-add-post/>  -->
   </div>
  
