refactor branch creation

--- a/blog-module/src/app/blog-categories/blog-add/blog-add-post/blog-add-post.component.html
+++ b/blog-module/src/app/blog-categories/blog-add/blog-add-post/blog-add-post.component.html
@@ -1,4 +1,5 @@
 <h2>Add New Post</h2>
+blog-add-post
 <form (ngSubmit)="submitPost()" #postForm="ngForm">
   <div>
     <label for="title">Title</label>
