--- a/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
+++ b/blog-module/src/app/blog-categories/blog-add/blog-add.component.html
@@ -1,6 +1,6 @@
 
 <div class="blog-add__chip--wrap">
-  
+  blog add component
   
   <div class="blog-add__chip--element">
   <a [routerLink]="['add/post']"> Add post </a>
