--- a/blog-module/src/app/blog-category-result/blog-category-result.component.html
+++ b/blog-module/src/app/blog-category-result/blog-category-result.component.html
@@ -1,5 +1,5 @@
 <h2>Posts for Category: {{ category }}</h2>
-
+blog category result
 <div class="blog-category-result__list">
   <div *ngFor="let article of articles" class="blog-category-result__item">
     <app-blog-entry [article]="article"></app-blog-entry>
