refactor: add and delete button

--- a/blog-module/src/app/blog-categories/blog-categories.component.html
+++ b/blog-module/src/app/blog-categories/blog-categories.component.html
@@ -2,7 +2,8 @@
 blog-categories
 <div class="categories__chip--wrap">
   
-  <app-blog-add></app-blog-add> 
+
+  <app-blog-add-button/>
   
   <div class="categories__chip--element">
     <a [routerLink]="['/']"> All posts </a>
