feature: user log in with google

--- a/blog-module/src/app/app.component.html
+++ b/blog-module/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-user-content/>
 <div class="app-layout">
     <div class="app-layout__nav-column">
       <app-blog-categories></app-blog-categories>
