feature: log in conditional rendering add post

--- a/blog-module/src/app/blog-functionality/blog-add-button/blog-add-button.component.html
+++ b/blog-module/src/app/blog-functionality/blog-add-button/blog-add-button.component.html
@@ -1,10 +1,7 @@
-
-<div class="blog-add-button__chip--wrap">
-
-  
+<!-- blog-add-button.component.html -->
+<div *ngIf="isLoggedIn" class="blog-add-button__chip--wrap">
   <div class="blog-add-button__chip--element">
-  <a [routerLink]="['add/post']"> Add post </a>
-  <!-- <app-blog-add-post/>  -->
+    <a [routerLink]="['add/post']">Add post</a>
+    <!-- <app-blog-add-post/> -->
   </div>
- 
 </div>
